--- a/src/style/GroupStudent.less
+++ b/src/style/GroupStudent.less
@@ -1,19 +1,14 @@
 
-:root{
-    font-family: "Poppins", serif;
-}
-body{
-    margin: 0;
-}
 .GroupStudent{
     height: 100vh;
     width: 100vw;
     background-color: black;
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     .GSwelcome{
+        font-size: 25px;
         color: white;
         span{
             color: orange;
@@ -32,23 +27,25 @@ body{
         box-shadow: 1px 1px 5px 5px #8080800b;
         animation: Anim1 3s linear infinite;
     }
-    .SCartas{
-        display: none;
-        color: white;
-        justify-content: center;
-        align-items: center;
-        background: #444444;
-        height: 10cm;
-        width: 8cm;
-        padding: 10px;
-        border-radius: 20px;
-        border: 1px solid #ffb703;
-        h2{
-            margin: 0;
-            text-align: center;
-        }
-        p{
-            text-align: center;
-        }
+    
+}
+.SCartas{
+    display: none;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    background: #444444;
+    height: 10cm;
+    width: 8cm;
+    padding: 10px;
+    border-radius: 20px;
+    border: 1px solid #ffb703;
+    h2{
+        
+        margin: 0;
+        text-align: center;
+    }
+    p{
+        text-align: center;
     }
 }
