--- a/src/style/GroupStudent.less
+++ b/src/style/GroupStudent.less
@@ -49,3 +49,26 @@
         text-align: center;
     }
 }
+#SCartas__div{
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    button{
+        height: 0.8cm;
+        width: 3cm;
+        border-radius: 10px;
+        border: 1px solid #de4702;
+        color: white;
+        transition: 300ms;
+        background: linear-gradient(90deg,#ffb703,#de4702,#ffb703);
+        background-size: 500%;
+        animation: Anim1 3s linear infinite;
+        &:hover{
+            height: 0.9cm;
+            width: 3.1cm;
+
+        }
+    }
+}
