--- a/src/style/GroupStudent.less
+++ b/src/style/GroupStudent.less
@@ -2,27 +2,27 @@
 .GroupStudent{
     height: 100vh;
     width: 100vw;
-    background-color: black;
+    background-color: #eff6ee;
     display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     .GSwelcome{
         font-size: 25px;
-        color: white;
+        color: #1d3557;
         span{
-            color: orange;
+            color: #00b4d8;
         }
     }
     button{
         height: 1cm;
         width: 3cm;
         border-radius: 10px;
-        border: 1px solid #de4702;
+        border: 1px solid #023047;
         font-size: 16px;
         font-weight: 600;
         color: white;
-        background: linear-gradient(90deg,#ffb703,#de4702,#ffb703);
+        background: linear-gradient(90deg,#219ebc,#023047,#219ebc);
         background-size: 500%;
         box-shadow: 1px 1px 5px 5px #8080800b;
         animation: Anim1 3s linear infinite;
@@ -31,22 +31,23 @@
 }
 .SCartas{
     display: none;
-    color: white;
+    color: gray;
     justify-content: center;
     align-items: center;
-    background: #444444;
+    background: #caf0f8;
     height: 10cm;
     width: 8cm;
     padding: 10px;
     border-radius: 20px;
-    border: 1px solid #ffb703;
+    border: 2px solid #023047;
     h2{
-        
+        color: #023047;
         margin: 0;
         text-align: center;
     }
     p{
         text-align: center;
+        font-weight: 500;
     }
 }
 #SCartas__div{
@@ -59,10 +60,10 @@
         height: 0.8cm;
         width: 3cm;
         border-radius: 10px;
-        border: 1px solid #de4702;
+        border: 1px solid #00b4d8;
         color: white;
         transition: 300ms;
-        background: linear-gradient(90deg,#ffb703,#de4702,#ffb703);
+        background: linear-gradient(90deg,#219ebc,#023047,#219ebc);
         background-size: 500%;
         animation: Anim1 3s linear infinite;
         &:hover{
