--- a/src/style/GroupStudent.less
+++ b/src/style/GroupStudent.less
@@ -73,3 +73,12 @@
         }
     }
 }
+#Nashla{
+    width: 10cm;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .NalaImg{
+        height: 100px;
+    }
+}
