--- a/src/style/GroupStudent.less
+++ b/src/style/GroupStudent.less
@@ -84,6 +84,8 @@
 
     }
     h3{
+        display: flex;
+        text-align: center;
         animation: NalaDialogs 2s;
     }
     .Btnconteiner{
