--- a/src/style/GroupStudent.less
+++ b/src/style/GroupStudent.less
@@ -106,6 +106,10 @@
             color: white;
         }
     }
+    .CoraNala{
+        height: 200px;
+        animation: Cora1 5s infinite;
+    }
 }
 @keyframes NalaDialogs {
     from{
@@ -113,5 +117,21 @@
     }
     to{
         opacity: 1;
+    }
+}
+@keyframes Cora1 {
+    from{
+        transform: scale(1);
+    }
+    to{
+        transform: scale(1.2);
+    }
+}
+@keyframes Cora2 {
+    from{
+        transform: scale(1.2);
+    }
+    to{
+        transform: scale(1);
     }
 }
