--- a/src/style/GroupStudent.less
+++ b/src/style/GroupStudent.less
@@ -110,6 +110,17 @@
         height: 200px;
         animation: Cora1 1s infinite;
     }
+    .BtnListo{
+        height: 0.8cm;
+        width: 3cm;
+        font-size: 16px;
+        font-weight: 600;
+        border-radius: 10px;
+        color: white;
+        border: none;
+        background: linear-gradient(90deg,#f70105, red,#f70105);
+        box-shadow: 1px 1px 5px 5px #f7010515;
+    }
 }
 @keyframes NalaDialogs {
     from{
