--- a/src/style/GroupStudent.less
+++ b/src/style/GroupStudent.less
@@ -109,6 +109,7 @@
     .CoraNala{
         height: 200px;
         animation: Cora1 1s infinite;
+        cursor: pointer;
     }
     .BtnListo{
         height: 0.8cm;
@@ -120,6 +121,7 @@
         border: none;
         background: linear-gradient(90deg,#f70105, red,#f70105);
         box-shadow: 1px 1px 5px 5px #f7010515;
+        cursor: pointer;
     }
 }
 @keyframes NalaDialogs {
