--- a/src/style/GroupStudent.less
+++ b/src/style/GroupStudent.less
@@ -10,6 +10,7 @@
     .GSwelcome{
         font-size: 25px;
         color: #1d3557;
+        text-align: center;
         span{
             color: #00b4d8;
         }
@@ -35,8 +36,7 @@
     justify-content: center;
     align-items: center;
     background: #caf0f8;
-    height: 10cm;
-    width: 8cm;
+    width: 90%;
     padding: 10px;
     border-radius: 20px;
     border: 2px solid #023047;
