--- a/src/style/GroupStudent.less
+++ b/src/style/GroupStudent.less
@@ -74,7 +74,7 @@
     }
 }
 #Nashla{
-    width: 10cm;
+    width: 55%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -150,6 +150,10 @@
 }
 .NashlaCarta{
     height: 15cm;
-    width: 25cm;
     text-align: left;
+}
+@media (max-width: 667px) {
+    #Nashla{
+        width: 85%;
+    }
 }
