--- a/src/style/Login.less
+++ b/src/style/Login.less
@@ -118,3 +118,29 @@ body{
     }
 };
 
+#ErrorUser{
+    margin: 0;
+    font-size: 12px;
+    font-weight: 600;
+    color: red;
+    display: none;
+}
+#ErrorPassword{
+    margin: 0;
+    font-size: 12px;
+    font-weight: 600;
+    color: red;
+    display: none;
+}
+.SL__Form_div2_d1{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.SL__Form_div2_d2{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
